chat Window done

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-NODE_MAILER_EMAIL=
-NODE_MAILER_GMAIL_APP_PASSWORD=
+NODE_MAILER_EMAIL=samishaikhsvvv22@gmail.com
+NODE_MAILER_GMAIL_APP_PASSWORD=deyoluvvlcqgddmj
 
 NEXT_PUBLIC_PUSHER_APP_CLUSTOR=
 NEXT_PUBLIC_PUSHER_APP_SECRET=
 NEXT_PUBLIC_PUSHER_APP_KEY=
 NEXT_PUBLIC_PUSHER_APP_ID=
 
-OPEN_AI_KEY=
+OPEN_AI_KEY=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
 
 NEXT_PUBLIC_UPLOAD_CARE_PUBLIC_KEY=ad910b5a924fa058f694
 UPLOAD_CARE_SECRET_KEY=c982955a5c8643d044c3
