--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
+    "openai": "^4.68.2",
     "prisma": "^5.17.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
@@ -69,6 +71,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
